fixing governance icons on mobile

--- a/src/styles/responsive/_mobile.scss
+++ b/src/styles/responsive/_mobile.scss
@@ -748,11 +748,22 @@
 
   @media only screen and (max-device-width: 375px) {
     .section-governance {
+      padding: 20rem 0.8rem;
+
       .governance {
+        &-main {
+          padding-left: 1.8rem;
+          padding-right: 1.8rem;
+
+          .info-top {
+            padding-left: 1.2rem;
+            padding-right: 1.2rem;
+          }
+        }
         &-icon {
           width: 30px;
           height: 30px;
-          margin-right: 15px;
+          margin-right: 13px;
         }
       }
     }
